[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptlflow"
version = "0.3.1"
authors = [
    {name = "Henrique Morimitsu", email = "henriquem87@gmail.com"},
]
description = "PyTorch Lightning Optical Flow"
readme = "README.md"
requires-python = ">=3.8,<3.12"
keywords = ["torch", "pytorch lightning", "optical flow", "models"]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "einops<0.8",
    "h5py<3.11",
    "kaleido<0.3",
    "lightning>=1.9.0,<2",
    "opencv-python<4.9",
    "pandas<2.2",
    "plotly<5.19",
    "pypng==0.20220715.0",
    "scipy<1.12",
    "tabulate<0.10",
    "tensorboard<2.16",
    "timm>=0.9.0,<0.10",
]

[project.urls]
"Source Code" = "https://github.com/hmorimitsu/ptlflow"
"Documentation" = "https://ptlflow.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["ptlflow*"]
exclude = ["tests"]

[options.package_data]
"*" = ["*.md", "*.txt", "*LICENSE", "*.ttf"]