[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptlflow"
version = "0.4.1"
authors = [
    {name = "Henrique Morimitsu", email = "henriquem87@gmail.com"},
]
description = "PyTorch Lightning Optical Flow"
readme = "README.md"
requires-python = ">=3.8,<3.13"
keywords = ["torch", "pytorch lightning", "optical flow", "models"]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "einops<0.9",
    "h5py<3.13",
    "kaleido<0.3",
    "lightning[pytorch-extra]>=2.1,<2.6",
    "loguru<0.8",
    "opencv-python<4.11",
    "pandas<2.3",
    "plotly<5.25",
    "pypng==0.20220715.0",
    "scipy<1.15",
    "tabulate<0.10",
    "tensorboard<2.19",
    "timm<1.1",
]

[project.urls]
"Source Code" = "https://github.com/hmorimitsu/ptlflow"
"Documentation" = "https://ptlflow.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["ptlflow*"]
exclude = ["tests"]

[options.package_data]
"*" = ["*.md", "*.txt", "*LICENSE", "*.ttf"]