[metadata]
name = ptlflow
version = attr: ptlflow.__version__
author = Henrique Morimitsu
author_email = henriquem87@gmail.com
description = PyTorch Lightning Optical Flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmorimitsu/ptlflow
project_urls =
    Documentation = https://ptlflow.readthedocs.io
    Source Code = https://github.com/hmorimitsu/ptlflow
keywords = torch, pytorch lightning, optical flow, models
license = Apache 2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.17.0
    opencv-python >= 4.0.0.21
    packaging >= 20.0
    pandas >= 1.1.0
    pillow >= 5.0
    plotly >= 5.0.0
    pypng >= 0.0.16
    pytorch-lightning >= 1.1.0
    requests >= 2.0.0
    scipy >= 1.0.0
    tabulate >= 0.8.3
    torch >= 1.7.0
    torchmetrics >= 0.2
    torchvision >= 0.8.0
    tqdm >= 4.41.0
python_requires = >=3.6

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.md, *.txt, *LICENSE, *.ttf
