[metadata]
name = ptlflow
version = attr: ptlflow.__version__
author = Henrique Morimitsu
author_email = henriquem87@gmail.com
description = PyTorch Lightning Optical Flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmorimitsu/ptlflow
project_urls =
    Documentation = https://ptlflow.readthedocs.io
    Source Code = https://github.com/hmorimitsu/ptlflow
keywords = torch, pytorch lightning, optical flow, models
license = Apache 2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
install_requires =
    einops>=0.3.0,<=0.4.*
    numpy>=1.17.0,<=1.22.*
    opencv-python>=4.0.0.21,<=4.6.*
    packaging>=20.0,<=21.*
    pandas>=1.1.0,<=1.4.*
    pillow>=5.0,<=9.2.*
    plotly>=5.0.0,<=5.9.*
    pypng~=0.0.16
    pytorch-lightning>=1.1.0,<=1.6.*,!=1.3.*,!=1.4.*
    requests>=2.0.0,<=2.28.*
    scipy>=1.0.0,<=1.9.*
    tabulate~=0.8.3
    timm~=0.6.3
    torch>=1.8.1,<=1.12.*
    torchmetrics>=0.2,<=0.9.*
    torchvision>=0.9.2,<=0.13.*
    tqdm>=4.41.0,<=4.64.*
python_requires = >=3.8

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.md, *.txt, *LICENSE, *.ttf
